fixed errors chat svc
