# API-Gateway/docs/swagger.json
@@ -560,13 +560,6 @@
                 "summary": "WebSocket Chat",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Authentication token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
                         "type": "integer",
                         "description": "User ID",
                         "name": "User_id",
@@ -3978,6 +3971,11 @@
     },
     "securityDefinitions": {
         "AdminAccessToken": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
+        },
+        "Authorization": {
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
